Add thinking support
